# src/main/resources/openapi3_1.yaml
@@ -207,7 +207,7 @@ paths:
                 - bearerAuth: []
             summary: Retorna el listado de todos los productos
             description: Retorna el listado de todos los productos, Autenticacion necesaria
-            operationId: retriveAllProduct
+            operationId: retrieveAllProduct
             responses: 
               200:
                 description: Si la peticion es correcta
@@ -224,7 +224,7 @@ paths:
                 - bearerAuth: []
             summary: Retorna el listado de todos los productos filtrado por id
             description: Retorna el listado de todos los productos filtrado por id, Autenticacion necesaria
-            operationId: retriveById 
+            operationId: retrieveById
             parameters:
                 - name: productId
                   in: path
@@ -275,7 +275,7 @@ paths:
                 - bearerAuth: []
             summary: Retorna el listado de todos los productos filtrado por id
             description: Retorna el listado de todos los productos filtrado por id, Autenticacion necesaria
-            operationId: retriveByName 
+            operationId: retrieveByName
             parameters:
                 - name: productName
                   in: path
@@ -342,7 +342,7 @@ paths:
                 - bearerAuth: []
             summary: Retorna el listado de todas las amrcas
             description: Retorna el listado de todos las marcas, Autenticacion necesaria
-            operationId: retriveAllBrand
+            operationId: retrieveAllBrand
             responses: 
               200:
                 description: Si la peticion es correcta
@@ -359,7 +359,7 @@ paths:
                 - bearerAuth: []
             summary: Retorna el listado de todas las marcas filtrado por id
             description: Retorna el listado de todas las marcas filtrado por id, Autenticacion necesaria
-            operationId: retriveBrandById 
+            operationId: retrieveBrandById
             parameters:
                 - name: brandId
                   in: path
@@ -410,7 +410,7 @@ paths:
                 - bearerAuth: []
             summary: Retorna el listado de todas las marcas filtrado por id
             description: Retorna el listado de todas las marcas filtrado por id, Autenticacion necesaria
-            operationId: retriveBrandByName 
+            operationId: retrieveBrandByName
             parameters:
                 - name: brandName
                   in: path
@@ -477,7 +477,7 @@ paths:
                 - bearerAuth: []
             summary: Retorna el listado de todos historicos de precios
             description: Retorna el listado de todos los historicos de precio, Autenticacion necesaria
-            operationId: retriveAllPrice
+            operationId: retrieveAllPrice
             responses: 
               200:
                 description: Si la peticion es correcta
